--- a/04kensington/index.html
+++ b/04kensington/index.html
@@ -43,6 +43,14 @@
                     <li><a href="#">이용약관</a></li>
                     <li><a href="#">예약문의</a></li>
                 </ul>
+                <div class="sns_wrap clearfix">
+                    <a href="https://www.youtube.com/channel/UCGWi1TIZZlcxPvxoSfrPc4Q?view_as=subscriber" class="btn_sns ft_youtube">youtube</a>
+                    <a href="https://goo.gl/gr3Qzw" class="btn_sns ft_post">post</a>
+                    <a href="http://blog.naver.com/e_leisurvice" class="btn_sns ft_blog">blog</a>
+                    <a href="http://pf.kakao.com/_Hgxmjxd" class="btn_sns ft_kakao">kakao</a>
+                    <a href="https://instagram.com/kensingtonhotel_official/" class="btn_sns ft_instagram">instagram</a>
+                    <a href="https://www.facebook.com/kensingtonhnr" class="btn_sns ft_facebook">facebook</a>
+                </div>
             </nav>
             <div class="toggle">
                 <div class="bar1"></div>
@@ -141,122 +149,96 @@
                         <img src="images/modal.png" alt="">
                     </a>
                 </li>
-                <li class="slider02Wrap">
-                    <ul class="slider02">
-                        <li>
-                            <div class="slider02_wrap clearfix">
-                                <div class="slider02_left clearfix">
-                                    <div class="slider02_txt">
-                                        <h4>어텀 고메<br>에디션</h4>
-                                        <p>깊어가는 가을 밤,<br>가을의 정취를 만끽하며<br>미식여행을 떠나보세요</p>
+                <li>
+                    <div class="slider02Wrap">
+                        <ul class="slider02">
+                            <li>
+                                <div class="slider02_wrap clearfix">
+                                    <div class="slider02_left clearfix">
+                                        <div class="slider02_txt">
+                                            <h4>어텀 고메<br>에디션</h4>
+                                            <p>깊어가는 가을 밤,<br>가을의 정취를 만끽하며<br>미식여행을 떠나보세요</p>
+                                        </div>
                                     </div>
-                                    <div class="pager_prev">
-                                        <img src="images/con_prev.png" alt="">
-                                    </div>
-                                    <div class="pager_next">
-                                        <img src="images/con_next.png" alt="">
+                                    <div class="slider02_right">
+                                        <a href="#"><img src="images/conslider1_01.jpg" alt=""></a>
                                     </div>
                                 </div>
-                                <div class="slider02_right">
-                                    <a href="#"><img src="images/conslider1_01.jpg" alt=""></a>
+                            </li>
+                            <li>
+                                <div class="slider02_wrap clearfix">
+                                    <div class="slider02_left clearfix">
+                                        <div class="slider02_txt">
+                                            <h4>선물 같은<br>하루</h4>
+                                            <p>소중한 사람에게<br>선물하고 싶은<br>특별한 하루</p>
+                                        </div>
+                                    </div>
+                                    <div class="slider02_right">
+                                        <a href="#"><img src="images/conslider1_02.jpg" alt=""></a>
+                                    </div>
                                 </div>
+                            </li>
+                            <li>
+                                <div class="slider02_wrap clearfix">
+                                    <div class="slider02_left clearfix">
+                                        <div class="slider02_txt">
+                                            <h4>켄싱턴 스위트<br>컬렉션</h4>
+                                            <p>단7일간만<br>만나볼 수 있는<br>스위트한 혜택</p>
+                                        </div>
+                                    </div>
+                                    <div class="slider02_right">
+                                        <a href="#"><img src="images/conslider1_03.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="slider02_wrap clearfix">
+                                    <div class="slider02_left clearfix">
+                                        <div class="slider02_txt">
+                                            <h4>추캉스</h4>
+                                            <p class="mb61">미리 예약하는 가을 여행<br>추석 보너스는 없어도<br>대체 공휴일 보너스가 있다!</p>
+                                        </div>
+                                    </div>
+                                    <div class="slider02_right">
+                                        <a href="#"><img src="images/conslider1_04.jpg" alt=""></a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="slider02_wrap clearfix">
+                                    <div class="slider02_left clearfix">
+                                        <div class="slider02_txt">
+                                            <h4>시그니처<br>초이스</h4>
+                                            <p>켄싱턴에서 가장 사랑받는<br>베스트셀링 상품들을<br>만나보세요.</p>
+                                        </div>
+                                    </div>
+                                    <div class="slider02_right">
+                                        <a href="#"><img src="images/conslider1_05.jpg" alt=""></a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="slider02_wrap clearfix">
+                                    <div class="slider02_left clearfix">
+                                        <div class="slider02_txt">
+                                            <h4>키즈<br>&패밀리</h4>
+                                            <p>사랑하는 가족과 함께 하는<br>특별한 가을 여행을<br>떠나보세요.</p>
+                                        </div>
+                                    </div>
+                                    <div class="slider02_right">
+                                        <a href="#"><img src="images/conslider1_06.jpg" alt=""></a>
+                                    </div>
+                                </li>
+                        </ul>
+                        <div class="slider02_btn">
+                            <div class="pager_prev">
+                                <img src="images/con_prev.png" alt="">
                             </div>
-                        </li>
-                        <li>
-                            <div class="slider02_wrap clearfix">
-                                <div class="slider02_left clearfix">
-                                    <div class="slider02_txt">
-                                        <h4>선물 같은<br>하루</h4>
-                                        <p>소중한 사람에게<br>선물하고 싶은<br>특별한 하루</p>
-                                    </div>
-                                    <div class="pager_prev">
-                                        <img src="images/con_prev.png" alt="">
-                                    </div>
-                                    <div class="pager_next">
-                                        <img src="images/con_next.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="slider02_right">
-                                    <a href="#"><img src="images/conslider1_02.jpg" alt=""></a>
-                                </div>
+                            <div class="pager_next">
+                                <img src="images/con_next.png" alt="">
                             </div>
-                        </li>
-                        <li>
-                            <div class="slider02_wrap clearfix">
-                                <div class="slider02_left clearfix">
-                                    <div class="slider02_txt">
-                                        <h4>켄싱턴 스위트<br>컬렉션</h4>
-                                        <p>단7일간만<br>만나볼 수 있는<br>스위트한 혜택</p>
-                                    </div>
-                                    <div class="pager_prev">
-                                        <img src="images/con_prev.png" alt="">
-                                    </div>
-                                    <div class="pager_next">
-                                        <img src="images/con_next.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="slider02_right">
-                                    <a href="#"><img src="images/conslider1_03.png" alt=""></a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="slider02_wrap clearfix">
-                                <div class="slider02_left clearfix">
-                                    <div class="slider02_txt">
-                                        <h4>추캉스</h4>
-                                        <p class="mb61">미리 예약하는 가을 여행<br>추석 보너스는 없어도<br>대체 공휴일 보너스가 있다!</p>
-                                    </div>
-                                    <div class="pager_prev">
-                                        <img src="images/con_prev.png" alt="">
-                                    </div>
-                                    <div class="pager_next">
-                                        <img src="images/con_next.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="slider02_right">
-                                    <a href="#"><img src="images/conslider1_04.jpg" alt=""></a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="slider02_wrap clearfix">
-                                <div class="slider02_left clearfix">
-                                    <div class="slider02_txt">
-                                        <h4>시그니처<br>초이스</h4>
-                                        <p>켄싱턴에서 가장 사랑받는<br>베스트셀링 상품들을<br>만나보세요.</p>
-                                    </div>
-                                    <div class="pager_prev">
-                                        <img src="images/con_prev.png" alt="">
-                                    </div>
-                                    <div class="pager_next">
-                                        <img src="images/con_next.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="slider02_right">
-                                    <a href="#"><img src="images/conslider1_05.jpg" alt=""></a>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="slider02_wrap clearfix">
-                                <div class="slider02_left clearfix">
-                                    <div class="slider02_txt">
-                                        <h4>키즈<br>&패밀리</h4>
-                                        <p>사랑하는 가족과 함께 하는<br>특별한 가을 여행을<br>떠나보세요.</p>
-                                    </div>
-                                    <div class="pager_prev">
-                                        <img src="images/con_prev.png" alt="">
-                                    </div>
-                                    <div class="pager_next">
-                                        <img src="images/con_next.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="slider02_right">
-                                    <a href="#"><img src="images/conslider1_06.jpg" alt=""></a>
-                                </div>
-                        </li>
-                    </ul>
+                        </div>
+                    </div>
                 </li>
                 <li>
                     <div class="con1_card">
@@ -347,8 +329,10 @@
             <div class="sec02_txt">
                 <h2><a href="#">artro logo</a></h2>
                 <p>문화 그 이상의 갤러리,<br>이랜드 아트로 갤러리</p>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+                <div class="sec02_btn clearfix">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
             </div>
             <div class="swiper mySwiper">
                 <ul class="swiper-wrapper">
@@ -496,6 +480,88 @@
             </div>
             
         </div>
+        <div class="sec03 clearfix">
+            <div class="sec03_left">
+                <div class="sec03_txt">
+                    <h2>kenny_logo</h2>
+                    <div class="card_btn"><a href="#">자세히 보기</a></div>
+                </div>
+            </div>
+            <div class="sec03_right">
+                <div class="sec03_txt">
+                    <h2>kenny_logo</h2>
+                    <div class="card_btn"><a href="#">자세히 보기</a></div>
+                </div>
+            </div>
+        </div>
+        <div class="sec04">
+            <div class="sec04_b1">
+                <h2><a href="#">CRUISE_logo</a></h2>
+            </div>
+            <div class="magazine">
+                <h4>켄싱턴 매거진</h4>
+                <a href="#" class="mag_plus">more</a>
+                <div class="mag">
+                    <div class="kenny09 clearfix">
+                        <img src="images/mo_mag01.png" alt="">
+                        <div class="kenny_txt">
+                            <h4>Hi Kenny 09</h4>
+                            <p>취향 저격<br>케니몰 MD의 여름템</p>
+                        </div>
+                    </div>
+                    <div class="kenny08 clearfix">
+                        <img src="images/mo_mag02.png" alt="">
+                        <div class="kenny_txt">
+                            <h4>Hi Kenny 08</h4>
+                            <p>스위스 전통의상<br>레더호젠 이야기</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sec04_b2">
+                <h2><a href="#">bears_logo</a></h2>
+            </div>
+        </div>
     </section>
+    <footer id="footer">
+        <div class="footerWrap clearfix">
+            <div class="foot_left clearfix">
+                <h2><a href="#">footer_logo</a></h2>
+                <div class="ft_address">
+                    <ul class="ft_up clearfix">
+                        <li><a href="#">회사소개</a></li>
+                        <li><a href="#">개인정보처리방침</a></li>
+                        <li><a href="#">이용약관</a></li>
+                        <li><a href="#">고객센터</a></li>
+                        <li><a href="#">예약문의</a></li>
+                        <li><a href="#">사이트맵</a></li>
+                    </ul>
+                    <ul class="ft_md01 clearfix">
+                        <li>(주) 이랜드파크</li>
+                        <li>강원도 고성군 토성면 신평골길 8-25</li>
+                    </ul>
+                    <ul class="ft_md02 clearfix">
+                        <li>사업자등록번호 : 227-81-00735</li>
+                        <li>통신판매업 신고번호 : 제 강원 고성 2015-2호</li>
+                        <li>대표이사 : 윤성대</li>
+                        <li>개인정보책임자 : 윤종현</li>
+                    </ul>
+                    <p>
+                        Copyright(c) E.LAND PARK. All Rights Reserved.<br>E.LAND GROUP
+                    </p>
+                </div>
+            </div>
+            <div class="foot_right">
+                <div class="sns_wrap clearfix">
+                    <a href="https://www.youtube.com/channel/UCGWi1TIZZlcxPvxoSfrPc4Q?view_as=subscriber" class="btn_sns ft_youtube">youtube</a>
+                    <a href="https://goo.gl/gr3Qzw" class="btn_sns ft_post">post</a>
+                    <a href="http://blog.naver.com/e_leisurvice" class="btn_sns ft_blog">blog</a>
+                    <a href="http://pf.kakao.com/_Hgxmjxd" class="btn_sns ft_kakao">kakao</a>
+                    <a href="https://instagram.com/kensingtonhotel_official/" class="btn_sns ft_instagram">instagram</a>
+                    <a href="https://www.facebook.com/kensingtonhnr" class="btn_sns ft_facebook">facebook</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
