--- a/04kensington/index.html
+++ b/04kensington/index.html
@@ -27,12 +27,12 @@
             </h1>
             <nav class="gnb">
                 <ul class="submenu clearfix">
-                    <li><a href="#">지점소개</a></li>
-                    <li><a href="#">프로모션</a></li>
-                    <li><a href="#">멤버십</a></li>
-                    <li><a href="#">켄싱턴프렌즈</a></li>
-                    <li><a href="#">켄싱턴매거진</a></li>
-                    <li><a href="#">고객지원</a></li>
+                    <li><a href="subpage01.html">지점소개</a></li>
+                    <li><a href="subpage02.html">프로모션</a></li>
+                    <li><a href="subpage03.html">멤버십</a></li>
+                    <li><a href="subpage04.html">켄싱턴프렌즈</a></li>
+                    <li><a href="subpage05.html">켄싱턴매거진</a></li>
+                    <li><a href="subpage06.html">고객지원</a></li>
                 </ul>
                 <div class="language clearfix">
                     <div class="kor"><a href="#">KOR</a></div>
