--- a/04kensington/index.html
+++ b/04kensington/index.html
@@ -262,7 +262,7 @@
                                 <h4 class="con_loca">지점</h4>
                                 <p>켄싱턴 호텔의 지점들을 한눈에</p>
                             </div>
-                            <div class="card_btn"><a href="#">자세히 보기</a></div>
+                            <div class="card_btn"><a href="subpage01.html">자세히 보기</a></div>
                         </div>
                         <img src="images/con_location.png" alt="" class="card_location">
                     </div>
